Fix 1px gap on right edge of sticky Action column

--- a/style.css
+++ b/style.css
@@ -316,14 +316,14 @@ tbody td:nth-child(10) {
 
 /* Action */
 thead th:nth-child(11) {
-  right: 0;
+  right: -1px;
   width: 52px;
   text-align: center;
   background: var(--surface-container-low);
   border-radius: 0 var(--radius-sm) 0 0;
 }
 tbody td:nth-child(11) {
-  right: 0;
+  right: -1px;
   width: 52px;
   text-align: center;
   background: #fff;
